test/jstypes/snapshots/v8_traceback__format_exception_for_v8__represents_nested_ExceptionGroups_with_context_py__0.exc.txt
  + Exception Group Traceback (most recent call last):
  |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 91, in call_and_capture_tbe
  |     fn()
  |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 71, in raise_sub_group_with_context
  |     raise ExceptionGroup("This is fine", [fail1, fail2])
  | ExceptionGroup: This is fine (2 sub-exceptions)
  +-+---------------- 1 ----------------
    | Exception Group Traceback (most recent call last):
    |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 62, in raise_sub_group_with_context
    |     self.raise_group_with_context()
    |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 58, in raise_group_with_context
    |     raise ExceptionGroup("Everything went wrong", [fail1, fail2])
    | ExceptionGroup: Everything went wrong (2 sub-exceptions)
    +-+---------------- 1 ----------------
      | Traceback (most recent call last):
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 83, in failing_operation_with_context
      |     self.failing_operation()
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 75, in failing_operation
      |     raise ValueError("Unable to do the thing")
      | ValueError: Unable to do the thing
      | 
      | During handling of the above exception, another exception occurred:
      | 
      | Traceback (most recent call last):
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 49, in raise_group_with_context
      |     self.failing_operation_with_context()
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 85, in failing_operation_with_context
      |     e.missing_attribute.foo()  # type: ignore[attr-defined]
      |     ^^^^^^^^^^^^^^^^^^^
      | AttributeError: 'ValueError' object has no attribute 'missing_attribute'
      +---------------- 2 ----------------
      | Traceback (most recent call last):
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 54, in raise_group_with_context
      |     self.failing_operation2()
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 79, in failing_operation2
      |     raise TypeError("Expected an Apple but received an Orange")
      | TypeError: Expected an Apple but received an Orange
      +------------------------------------
    +---------------- 2 ----------------
    | Exception Group Traceback (most recent call last):
    |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 67, in raise_sub_group_with_context
    |     self.raise_group()
    |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 31, in raise_group
    |     raise ExceptionGroup("Everything went wrong", [fail1, fail2])
    | ExceptionGroup: Everything went wrong (2 sub-exceptions)
    +-+---------------- 1 ----------------
      | Traceback (most recent call last):
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 22, in raise_group
      |     self.failing_operation()
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 75, in failing_operation
      |     raise ValueError("Unable to do the thing")
      | ValueError: Unable to do the thing
      +---------------- 2 ----------------
      | Traceback (most recent call last):
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 27, in raise_group
      |     self.failing_operation2()
      |   File "/…/v8serialize/test/jstypes/_v8_traceback_error_fixtures.py", line 79, in failing_operation2
      |     raise TypeError("Expected an Apple but received an Orange")
      | TypeError: Expected an Apple but received an Orange
      +------------------------------------
